--- a/tmuxinator/.config/tmuxinator/bangProj.yml
+++ b/tmuxinator/.config/tmuxinator/bangProj.yml
@@ -40,11 +40,13 @@ root: ~/Desktop
 # attach: false
 
 windows:
-  - vim:
+  - vim | FE:
       # Synchronize all panes of this window, can be enabled before or after the pane commands run.
       # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
       # synchronize: after
       panes:
-        - ranger
+        - ls
   - shell | devServer:
+        - ls
+  - vim | BE:
         - ls
