--- a/tmuxinator/.config/tmuxinator/ssh157.yml
+++ b/tmuxinator/.config/tmuxinator/ssh157.yml
@@ -1,7 +1,7 @@
-# /Users/jonathanpalacio/.config/tmuxinator/df.yml
+# /Users/jonathanpalacio/.config/tmuxinator/ssh157.yml
 
-name: df
-root: ~/dotfiles
+name: ssh157
+root: ~/
 
 # Optional tmux socket
 # socket_name: foo
@@ -40,9 +40,9 @@ root: ~/dotfiles
 # attach: false
 
 windows:
-  - dotfiles:
+  - ssh157:
       # Synchronize all panes of this window, can be enabled before or after the pane commands run.
       # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
       # synchronize: after
       panes:
-        - ranger
+        - ssh root@157.230.226.6
