--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -151,6 +151,7 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 # with tmux 2.1. This is backwards-compatible with earlier versions of tmux,
 # AFAICT.
 set-option -g assume-paste-time 0
+set-option -sg escape-time 10
 
 
 # RESIZE TMUX PANE CTRL A OPTION ARROW KEY
