adjusted tmuxinator scripts to open nvim by default over vim. added startify to have better session support reformatted coc global install list so it isnt so cluttered looking

--- a/tmuxinator/.config/tmuxinator/bangProj.yml
+++ b/tmuxinator/.config/tmuxinator/bangProj.yml
@@ -40,7 +40,7 @@ root: ~/Desktop
 # attach: false
 
 windows:
-  - vim | FE:
+  - nvim | FE:
       # Synchronize all panes of this window, can be enabled before or after the pane commands run.
       # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
       # synchronize: after
@@ -48,5 +48,5 @@ windows:
         - ls
   - shell | devServer:
         - ls
-  - vim | BE:
+  - nvim | BE:
         - ls
