--- a/neovim/.config/nvim/coc-settings.json
+++ b/neovim/.config/nvim/coc-settings.json
@@ -24,6 +24,20 @@
   "python.linting.pylintEnabled": false,
   "python.linting.pep8Enabled": true,
   "python.linting.enabled": true,
+  "diagnostic.virtualText": true,
+  "diagnostic.virtualTextPrefix": " # ",
+  "diagnostic.refreshOnInsertMode": false,
+  "diagnostic.refreshAfterSave": false,
+  "diagnostic.checkCurrentLine": true,
+  "diagnostic.messageTarget": "echo",
+  "diagnostic.enableSign": true,
+
+  "signature.target": "echo",
+
+  "suggest.floatEnable": false,
+  "suggest.timeout": 5000,
+  "suggest.maxCompleteItemCount": 3,
+  "suggest.localityBonus": true,
   "diagnostic.infoSign": "ღ",
   "diagnostic.hintSign": "ஐ",
   "diagnostic.warningSign": "⚠",
@@ -31,7 +45,6 @@
   "diagnostic.enable": true,
   "diagnostic.signOffset": 9999999,
   "diagnostic.highlightOffset": 9999999,
-  "diagnostic.refreshOnInsertMode": true,
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de",
     "variable": "\ue79b",
