--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -10,7 +10,7 @@ env:
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: alacritty
+  # TERM: alacritty
   TERM: xterm-256color-italic
 
 # window:
@@ -123,7 +123,8 @@ font:
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #family: monospace
-    family: InconsolataLGC Nerd Font Mono
+    # family: InconsolataLGC Nerd Font Mono Italic
+    family: Menlo Italic
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -135,7 +136,8 @@ font:
   # If the bold italic family is not specified, it will fall back to the
   # value specified for the normal font.
   #family: monospace
-    family: InconsolataLGC Nerd Font Mono
+    # family: InconsolataLGC Nerd Font Mono Italic
+    family: Menlo Italic
 
   # The `style` can be specified to pick a specific face.
     style: Bold Italic
