--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,12 @@
 #et-option -g default-command "reattach-to-user-namespace -l zsh"
-set -g default-terminal 'tmux-256color'
+# set -g default-terminal 'tmux-256color'
+set -g default-terminal 'xterm-256color-italic'
+# set -g default-terminal 'alacritty'
 #set -g default-terminal "screen-256color"
-#set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-set-option -ga terminal-overrides ",tmux-256color:Tc"
-TERM=screen-256color
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set-option -ga terminal-overrides ",tmux-256color:Tc"
+# TERM=screen-256color
+# TERM=tmux-256color
 #  C-a since it's on the home row and easier to hit than C-b
 set-option -g prefix C-a
 unbind-key C-a
@@ -19,7 +22,8 @@ setw -g mode-keys vi
 # mouse behavior
 set -g mouse on
 
-set-option -g default-terminal screen-256color
+# set-option -g default-terminal screen-256color
+# set-option -g default-terminal tmux-256color-italic
 
 bind-key : command-prompt
 bind-key r refresh-client
@@ -103,7 +107,7 @@ set-option -g status-fg default
 # red '#ff5555'
 # yellow '#f1fa8c'
 
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 # pane border
 set -g pane-border-style fg='#6272a4'
 set -g pane-active-border-style fg='#ff79c6'
