--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 #et-option -g default-command "reattach-to-user-namespace -l zsh"
 # set -g default-terminal 'tmux-256color'
-set -g default-terminal 'xterm-256color-italic'
+# set -g default-terminal 'xterm-255color-italic'
 # set -g default-terminal 'alacritty'
 #set -g default-terminal "screen-256color"
 # set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
@@ -24,6 +24,7 @@ set -g mouse on
 
 # set-option -g default-terminal screen-256color
 # set-option -g default-terminal tmux-256color-italic
+# set-option -g default-terminal "tmux-256color"
 
 bind-key : command-prompt
 bind-key r refresh-client
