hooked up alacritty and alacritty.yml, added dracula.yml, installed tmux plugin manager and added tmux navigator... tried it before trying it again.  needed to find alternative to show hidden files in ranger <backspace> remapped some of my bindings in nvim that used to use h or l ex. nohighlight is now leader l, new alias c to clear as now in tmux ctrl-l is not recognized as tmux-navigator wants to move to left, so instead of ctrl c will just type c, made new aliases for tmux in general as i use it all the time, added t, taa, ta, tk, tka, fixed fuck command on mack as it wasnt working as it does on linux ex ran ranger remembered i need sudo ranger so just exit ranger and type fuck now with the fix will put me back in ranger as super user, new plugin instructions in .tmux.conf pretty straight forward, also new copy paste situation going on. with alacrity can hit ctrl-shift-space and then v, y, p work as expected. but if in tmux not so much so can go into tmux copy mode with normal prefix [ and then do it that way or use new plugin if the text is a url or number or other things with prefix F and then works similar to vim easymotion. added folder for plugins into .gitignore as i dont think they should be versioned not sure though.... and onward

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /neovim/.config/nvim/plugged/
 /zsh/.env
 .env
+/alacritty/.config/alacritty/alacritty-master
+/alacritty/.config/alacritty/dracula.yml
+/tmux/.tmux
