--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,7 @@ set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
 set -g base-index 1
+# run-shell ~/.tmux/plugins/tmux-fingers/tmux-fingers.tmux
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
@@ -41,14 +42,6 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-
-# uncomment below stanza to enable smart pane switching with awareness of vim splits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-# bind C-l send-keys 'C-l'
 
 bind-key C-o rotate-window
 
@@ -173,3 +166,29 @@ set-option -sg escape-time 10
 # tmux attach -t # to get back to numbered session
 # prefix d to exit current session
 # ctrl d to kill session
+
+###########################
+# Plugins
+###########################
+# To install plugins:
+#   1) Add plugin down here
+#   2) Prefix + I to install plugin
+# To update plugins:
+#   1) Prefix + U
+# To remove plugins:
+#   1) Remove line down here
+#   2) Prefix + ALT + U
+# If you're using iTerm2 on a Mac you may need to go to your Profiles,
+# then keys and select that the `option` key should be treated as `Esc+`
+# in order for the `Prefix + ALT + U` combination to work.
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# Add more plugins below this line
+
+# Run Tmux Plugin Manager
+run '~/.tmux/plugins/tpm/tpm'
+set -g @fingers-key F
