added some go settings

--- a/neovim/.config/nvim/coc-settings.json
+++ b/neovim/.config/nvim/coc-settings.json
@@ -87,4 +87,15 @@
     "reason"
   ],
   "graphql.watcherPattern": "**/*.{graphql,gql,js,jsx,ts,tsx,re}"
+  /* "languageserver": { */
+  /*   "golang": { */
+  /*     "command": "gopls", */
+  /*     "filetypes": ["go"], */
+  /*     "initializationOptions": { */
+  /*       "gocodeCompletionEnabled": true, */
+  /*       "diagnostic": true, */
+  /*       "linting": "golint" */
+  /*     } */
+  /*   } */
+  /* } */
 }
