added TIPS section for tmux and a command ive never needed but was handy

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -192,3 +192,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # Run Tmux Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
 set -g @fingers-key F
+
+# TIPS
+# to restore inactive pane run prefix :  respawn-pane -k // this will keep
+# sizing and give you back a working pane... not restore the frozen program
