--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-#et-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 # set -g default-terminal 'tmux-256color'
 # set -g default-terminal 'xterm-255color-italic'
 # set -g default-terminal 'alacritty'
@@ -7,6 +7,10 @@
 # set-option -ga terminal-overrides ",tmux-256color:Tc"
 # TERM=screen-256color
 # TERM=tmux-256color
+set-option default-terminal "tmux-256color"
+set-option -a terminal-overrides ",XXX:RGB"
+set-option -a terminal-overrides ",*256col*:RGB"
+set-option -a terminal-overrides ",alacritty:RGB"
 #  C-a since it's on the home row and easier to hit than C-b
 set-option -g prefix C-a
 unbind-key C-a
