--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 .env
 /alacritty/.config/alacritty/alacritty-master
 /alacritty/.config/alacritty/dracula.yml
+/alacritty/.config/alacritty/dracula.toml
 /tmux/.tmux
