--- a/alacritty-new/.config/alacritty/alacritty.toml
+++ b/alacritty-new/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
-import = ["/Users/jonathanpalacio/dotfiles/alacritty/.config/alacritty/dracula.toml"]
-live_config_reload = true
+general.import = ["/Users/jonathanpalacio/dotfiles/alacritty/.config/alacritty/dracula.toml"]
+general.live_config_reload = true
 
 [colors]
 draw_bold_text_with_bright_colors = true
