--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,6 @@
 theme = dracula
-background-opacity = .9
+background-opacity = .8
+background-opacity-cells = true
 macos-titlebar-style = "hidden"  
 
 font-family = "Inconsolata LGC Nerd Font Mono"                    
